@@ -1,1 +1,1 @@
-{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202302071233","configPath":"/storage/emulated/0/.config/Automate/1 Context/","comment":"Adding init check function","uri":"content://com.llamalab.automate.provider/flows/8/data"}
+{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202303231541","configPath":"/storage/emulated/0/.config/Automate/1 Context/","comment":"Added automated git commit function","uri":"content://com.llamalab.automate.provider/flows/8/data"}
