@@ -64,3 +64,4 @@
 202302071214: Added toast to notify that context flows have started
 202302071220: Initial version
 202302071234: Adding init check function
+202303231541: Added automated git commit function
